--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    
+    <link src="./users.sql" />
 
     <style type="text/css">
       #overlay {
