--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    
-    <link src="./users.sql" />
-
+   
     <style type="text/css">
       #overlay {
         position: fixed;
@@ -236,6 +234,7 @@
     </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+  <script src="http://mysqljs.com/mysql.js"></script>
     <script>
       var app = new Vue({
         el: "#app",
